  remote server to accept the connection request. When using the times
  as an indicator of user experience, this is usually what you want.
  Sometimes however you are more interested in the time the entire
  HTTP transaction takes, including the time required to read the HTTP
  response over the network. If so, set this parameter to true.


Grinder 2.6.1
-------------

  Various tweaks to the timing code. The response times reported by
  your test scripts will almost certainly be smaller and more correct
  with this version. See doc/Timing.txt for information.

  New property: grinder.recordTime. See the file doc/Timing.txt for
  details.

  New property: grinder.logProcessStreams. See README for details.

  Handle multiple Set-Cookie headers, courtesy of Christian Nedregard.


Grinder 2.6
-----------

  Console rework. Extra knobs and dials which allow the console to be
  set to capture a certain number of samples - see README for details.
  New average TPS reporting.

  You can now use the Console to request that Grinder processes exit.
  ** IMPORTANT** The property "grinder.waitForConsoleSignal" has been
  renamed to "grinder.receiveConsoleSignals".

  Cool HttpPluginSnifferFilter enhancements from Dr Paddy Spencer that
  rewrite absolute URLs on the fly. This makes creating test scripts
  for sites that use absolute URL's much less painful. The solution
  includes a new way of running the sniffer by defining it as a proxy
  to the browser. Paddy promises to document all of this RSN.

  Several bug fixes including:
   - Don't spin uselessly when not reporting to the console.
   - Don't broadcast needless cruft in the statistics report messages.
     (read: your network will no longer creak, this explains the need
      to up the buffer in 2.5).
   - Log directory is no longer mandatory.


Grinder 2.5
-----------

  The HTTP plugin now supports "string beans". These allow URL's and
  POST data to be easily parameterised.
