@@ -18,7 +18,7 @@ grinder.console.multicastPort=1235
 grinder.logDirectory=log
 grinder.appendLog=false
 
-grinder.thread.beginCycleSleepTime=500
+grinder.thread.initialSleepTime=500
 grinder.thread.sleepTime=5000
 grinder.thread.sleepTimeFactor=0.1
 grinder.thread.sleepTimeVariation=0.005
