@@ -1,3 +1,9 @@
+2001-05-23  Philip Aston  <paston@bea.com>
+
+	* CHANGES, TODO, examples/http/grinder.properties, README, src/net/grinder/engine/process/GrinderThread.java:
+	Remove grinder.thread.beginCycleSleepTime.
+	Add grinder.thread.initialSleepTime.
+
 2001-05-14  Philip Aston  <paston@bea.com>
 
 	* examples/http/grinder.properties, src/net/grinder/engine/process/ThreadContextImplementation.java, src/net/grinder/plugin/http/example/ExampleStringBean2.java, src/net/grinder/plugininterface/PluginThreadContext.java:
