@@ -9,6 +9,12 @@ Grinder 2.6.2
   HTTP transaction takes, including the time required to read the HTTP
   response over the network. If so, set this parameter to true.
 
+  Removed "grinder.thread.beginCycleSleepTime", as its redundant. (Use
+  grinder.test0.sleepTime instead).
+
+  New property "grinder.thread.initialSleepTime". See README for
+  details.
+
 
 Grinder 2.6.1
 -------------
